fix: input width on mobile

--- a/assets/css/app/settings.css
+++ b/assets/css/app/settings.css
@@ -140,6 +140,6 @@
   }
 
   .settings-wrap input{
-    max-width: 200px;
+    max-width: 200px !important;
   }
 }
